@@ -1,0 +1,12 @@
+# $NetBSD: Makefile,v 1.1.1.1 2005/05/23 21:45:21 jdolecek Exp $
+
+MODNAME=		pcntl
+CATEGORIES+=		devel
+PKGREVISION=		# empty
+COMMENT=		PHP extension for Process Control functions
+
+
+CONFIGURE_ARGS+=	--enable-${MODNAME}=shared
+
+.include "../../lang/php/ext.mk"
+.include "../../mk/bsd.pkg.mk"
